--- a/main.css
+++ b/main.css
@@ -4,10 +4,11 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   color: rgb(0, 0, 0);
   text-align: center;
   line-height: 1.5;
+  line-height: 20px;
 }
 
 nav,
@@ -26,6 +27,7 @@ nav {
 }
 
 header {
+  text-align: start;
   /*this needs to be sized
   background-image: url(/images/zhang-kenny-E163LGOdZnw-unsplash.jpg);
 */
@@ -50,6 +52,14 @@ span {
   font-size: 16px;
 }
 
+footer {
+  text-align: center;
+}
+
 h1 {
-  font-size: 15px;
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+h2 {
+  font-size: 12px;
 }
