--- a/main.css
+++ b/main.css
@@ -3,6 +3,9 @@
 }
 
 body {
+  margin: auto;
+  background-color: rgba(228, 217, 214, 0.979);
+
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: rgb(0, 0, 0);
@@ -11,33 +14,83 @@ body {
   line-height: 20px;
 }
 
-nav,
-footer {
-  padding: 1% 0;
-  /*background-color: ;*/
+nav {
+  padding: 3% 0;
+  padding-right: 5%;
   text-align: right;
 }
 
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
+nav a {
+  text-decoration: none;
+  color: black;
 }
 
-header {
-  text-align: start;
-  /*this needs to be sized
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+.main-page-header {
   background-image: url(/images/zhang-kenny-E163LGOdZnw-unsplash.jpg);
-*/
-  padding: 12% 0;
+
+  /*background-image: url("data:image/svg+xml,%3Csvg width='44' height='12' viewBox='0 0 44 12' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M20 12v-2L0 0v10l4 2h16zm18 0l4-2V0L22 10v2h16zM20 0v8L4 0h16zm18 0L22 8V0h16z' fill='%23d86912' fill-opacity='0.5' fill-rule='evenodd'/%3E%3C/svg%3E");
+  */
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 50vh;
+  text-align: start;
+  font-size: 40px;
+  color: aliceblue;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 5%;
+  border: 10px;
 }
 
-section {
-  min-height: 200px;
-  padding: 6% 0;
-  background-color: rgb(184, 173, 173);
+main {
+  margin: 0px;
+  padding: 0px;
+}
+
+/*main a {
+  text-decoration: none;
+  color: rgb(4, 4, 95);
+  padding: 10px;
+}*/
+
+.about-page-header {
+  height: 60px;
+  padding-left: 3%;
+  padding-right: 3%;
+
+  text-align: left;
+}
+
+.about-main {
+  padding-left: 10%;
+  text-align: left;
+  line-height: 2;
+  max-width: 85%;
+}
+
+.about-main p {
+  padding-top: 30px;
+  text-align: center;
+}
+
+.project-container {
+  height: 35%;
+  padding: 0% 0;
+}
+
+img {
+  width: 70%;
+  height: 60%;
 }
 
 main {
@@ -58,8 +111,9 @@ footer {
 
 h1 {
   margin-bottom: 20px;
-  font-size: 20px;
+  font-size: 30px;
+  line-height: 3.5;
 }
 h2 {
-  font-size: 12px;
+  font-size: 20px;
 }
