--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ body {
   padding-right: 3%;
   padding-top: 5%;
   padding-bottom: 10%;
-  margin-bottom: 20%;
+  margin-bottom: 10%;
 }
 
 nav {
@@ -51,6 +51,58 @@ li {
   display: inline;
   padding: 0 20px 0 20px;
 }
+
+.language-icons {
+  margin: auto;
+  width: 80%;
+  height: 20vh;
+
+  /*display: inline-block;*/
+}
+div {
+  display: inline-flex;
+  align-content: space-evenly;
+
+  margin-right: 10%;
+  margin-bottom: 5%;
+  width: 45px;
+  height: 45px;
+}
+
+.html {
+  background-image: url(/images/iconfinder_HTML_Color_Black_65697.png);
+
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.css {
+  background-image: url(/images/iconfinder_css3_icon_291788.svg);
+
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.js {
+  background-image: url(/images/720px-JavaScript-logo.png);
+
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/*.react {
+  background-image: url(/images/kisspng-react-javascript-responsive-web-design-github-angu-github-5accac250cda95.4452823815233628530527.png);
+
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.nodejs {
+  background-image: url(/images/Node.js_logo.svg);
+
+  background-size: contain;
+  background-repeat: no-repeat;
+}*/
 
 .about-page-header {
   height: 60px;
