--- a/main.css
+++ b/main.css
@@ -167,6 +167,11 @@ h2 {
     width: 60px;
     height: 60px;
   }
+
+  p {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 }
 
 @media screen and (min-width: 900px) {
