--- a/main.css
+++ b/main.css
@@ -114,14 +114,14 @@ div {
 }
 
 .about-main p {
-  padding-top: 20vh;
+  padding-top: 15vh;
   padding-bottom: 5vh;
   text-align: center;
 }
 
 .project-container {
   height: 35%;
-  padding: 0% 0;
+  padding: 12% 0;
   line-height: 2;
 }
 
@@ -157,8 +157,15 @@ h1 {
   font-size: 30px;
   line-height: 3.5;
 }
+
 h2 {
   font-size: 20px;
+}
+
+h3 {
+  text-align: left;
+  max-width: 85%;
+  padding-left: 12%;
 }
 
 @media screen and (min-width: 400px) {
@@ -177,6 +184,19 @@ h2 {
   p {
     font-size: 20px;
   }
+
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  h3 {
+    font-size: 22px;
+  }
+
   main a {
     font-size: 20px;
   }
@@ -195,6 +215,10 @@ h2 {
   }
   h2 {
     font-size: 30px;
+  }
+
+  h3 {
+    font-size: 26px;
   }
 
   main p {
