--- a/main.css
+++ b/main.css
@@ -142,9 +142,12 @@ div {
 }
 
 main a {
+  border: 1px solid;
+  border-radius: 4px;
   color: #02083f;
   text-decoration: none;
   padding-right: 10px;
+  padding-left: 10px;
 }
 
 img {
